add demo arrow pointing canvas

--- a/server/index.html
+++ b/server/index.html
@@ -2,9 +2,13 @@
 <html>
 	<head>
 		<title>Network Snake</title>
+		<script src="sockets.js" type="text/javascript">
+		</script>
 	</head>
 	<body>
 		<h1>Network Snake</h1>
 		<p>Hello World!</p>
+		<canvas width=256 height=256 id="canvas">
+		</canvas>
 	</body>
 </html>
