--- a/server/index.html
+++ b/server/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<title>Network Snake</title>
-		<script src="sockets.js" type="text/javascript">
+		<script src="js/draw.js" type="text/javascript"></script>
+        <script src="js/sockets.js" type="text/javascript"></script>
 		</script>
 	</head>
 	<body>
