--- a/server/web/index.html
+++ b/server/web/index.html
@@ -6,6 +6,7 @@
 		<script src="writelocation.js" type="text/javascript"></script>
 		<script src="draw.js" type="text/javascript"></script>
         <script src="sockets.js" type="text/javascript"></script>
+        <link rel="stylesheet" type="text/css" href="styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 		<meta charset="utf-8">
 	</head>
