front-end improvements

--- a/server/web/controls.html
+++ b/server/web/controls.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	</head>
-	<body>
+	<body class="controls">
 		<h1>Network Snake - GamePad</h1>
 		<p>Entwickelt von @schokotets, 2020.
 			<a href="https://github.com/schokotets/snake">github.com/schokotets/snake</a></p>
