--- a/server/web/index.html
+++ b/server/web/index.html
@@ -11,7 +11,7 @@
 		<meta charset="utf-8">
 	</head>
 	<body onload="writeLocation()">
-		<h1>Network Snake - View</h1>
+		<h1>Network Snake - watch</h1>
 		<p>Entwickelt von @schokotets, 2020.
 			<a href="https://github.com/schokotets/snake">github.com/schokotets/snake</a></p>
 		<canvas width="400" height="240" id="canvas">
