--- a/server/web/index.html
+++ b/server/web/index.html
@@ -16,10 +16,6 @@
 			<a href="https://github.com/schokotets/snake">github.com/schokotets/snake</a></p>
 		<canvas width="400" height="240" id="canvas">
 		</canvas>
-		<ol>
-			<li>Nehme dein Smartphone zur Hand</li>
-			<li>Trete dem WLAN-Netzwerk "snake" mit Passwort "n3tw0rk!" bei</li>
-			<li>Öffne <a href="controls.html" id="location">0.0.0.0/controls.html</a></li>
-		</ol>
+		<a href="/controls.html">Mitspielen!</a>
 	</body>
 </html>
